// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ModalConfirmation should match confirm mode with description 1`] = `
<div>
  <div
    class="p-6"
  >
    <h2
      class="h4 mb-2 max-w-sm text-neutral"
    >
      my title
    </h2>
    <div
      class="mb-6 text-sm text-neutral-subtle"
    >
      my description
      <span
        class="link relative -top-0.5 ml-1 inline max-w-[250px] cursor-pointer truncate text-sm text-info"
        data-state="closed"
        data-testid="copy-cta"
      >
        staging
         
        <i
          aria-hidden="true"
          class="fa-regular fa-copy "
        />
      </span>
    </div>
    <form>
      <div
        class="mb-5"
        data-testid="input-small-wrapper"
      >
        <div
          class="input input--small flex-grow"
          data-testid="input"
        >
          <label
            class="hidden"
          />
          <input
            class="absolute left-0 top-0 h-full w-full rounded bg-transparent px-2 text-sm text-neutral placeholder:text-neutral-subtle"
            data-testid="input-value"
            name="name"
            placeholder="Enter the current name"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-10 px-3 rounded-lg text-neutral-subtle hover:bg-surface-neutral-subtle"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`ModalConfirmation should match delete mode with description 1`] = `
<div>
  <div
    class="p-6"
  >
    <h2
      class="h4 mb-2 max-w-sm text-neutral"
    >
      my title
    </h2>
    <div
      class="mb-6 text-sm text-neutral-subtle"
    >
      my description
      <span
        class="link relative -top-0.5 ml-1 inline max-w-[250px] cursor-pointer truncate text-sm text-info"
        data-state="closed"
        data-testid="copy-cta"
      >
        staging
         
        <i
          aria-hidden="true"
          class="fa-regular fa-copy "
        />
      </span>
    </div>
    <form>
      <div
        class="mb-5"
        data-testid="input-small-wrapper"
      >
        <div
          class="input input--small flex-grow"
          data-testid="input"
        >
          <label
            class="hidden"
          />
          <input
            class="absolute left-0 top-0 h-full w-full rounded bg-transparent px-2 text-sm text-neutral placeholder:text-neutral-subtle"
            data-testid="input-value"
            name="name"
            placeholder="Enter the current name"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-10 px-3 rounded-lg text-neutral-subtle hover:bg-surface-neutral-subtle"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`ModalConfirmation should match delete mode without description 1`] = `
<div>
  <div
    class="p-6"
  >
    <h2
      class="h4 mb-2 max-w-sm text-neutral"
    >
      my title
    </h2>
    <div
      class="mb-6 text-sm text-neutral-subtle"
    >
      <span
        class="link relative -top-0.5 ml-1 inline max-w-[250px] cursor-pointer truncate text-sm text-info"
        data-state="closed"
        data-testid="copy-cta"
      >
        staging
         
        <i
          aria-hidden="true"
          class="fa-regular fa-copy "
        />
      </span>
    </div>
    <form>
      <div
        class="mb-5"
        data-testid="input-small-wrapper"
      >
        <div
          class="input input--small flex-grow"
          data-testid="input"
        >
          <label
            class="hidden"
          />
          <input
            class="absolute left-0 top-0 h-full w-full rounded bg-transparent px-2 text-sm text-neutral placeholder:text-neutral-subtle"
            data-testid="input-value"
            name="name"
            placeholder="Enter the current name"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-10 px-3 rounded-lg text-neutral-subtle hover:bg-surface-neutral-subtle"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </form>
  </div>
</div>
`;
